src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket.qsystem.LazyMeasureReset.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%Qubit = type opaque
%Result = type opaque

define private { %Qubit*, i1 } @_hl.main.1(%Qubit* %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call %Result* @__QIR__CONV_Qubit_TO_Result(%Qubit* %0)
  call void @__quantum__qis__mz__body(%Qubit* %0, %Result* %1)
  call void @__quantum__qis__reset__body(%Qubit* %0)
  %2 = call i1 @__quantum__rt__read_result(%Result* %1)
  %3 = select i1 %2, i1 true, i1 false
  %mrv = insertvalue { %Qubit*, i1 } undef, %Qubit* %0, 0
  %mrv6 = insertvalue { %Qubit*, i1 } %mrv, i1 %3, 1
  ret { %Qubit*, i1 } %mrv6
}

declare %Result* @__QIR__CONV_Qubit_TO_Result(%Qubit*)

declare void @__quantum__qis__mz__body(%Qubit*, %Result* writeonly) #0

declare void @__quantum__qis__reset__body(%Qubit*)

declare i1 @__quantum__rt__read_result(%Result* readonly)

attributes #0 = { "irreversible" }
