src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@llvm21_tket.qsystem.MeasureReset.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { ptr, { i1, i1 } } @_hl.main.1(ptr %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call ptr @__QIR__CONV_Qubit_TO_Result(ptr %0)
  call void @__quantum__qis__mz__body(ptr %0, ptr %1)
  call void @__quantum__qis__reset__body(ptr %0)
  %2 = call i1 @__quantum__rt__read_result(ptr %1)
  %3 = select i1 %2, i1 true, i1 false
  %4 = insertvalue { i1, i1 } { i1 true, i1 poison }, i1 %3, 1
  %mrv = insertvalue { ptr, { i1, i1 } } poison, ptr %0, 0
  %mrv10 = insertvalue { ptr, { i1, i1 } } %mrv, { i1, i1 } %4, 1
  ret { ptr, { i1, i1 } } %mrv10
}

declare ptr @__QIR__CONV_Qubit_TO_Result(ptr)

declare void @__quantum__qis__mz__body(ptr, ptr writeonly) #0

declare void @__quantum__qis__reset__body(ptr)

declare i1 @__quantum__rt__read_result(ptr readonly)

attributes #0 = { "irreversible" }
