src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@llvm21_tket.qsystem.PhasedX.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define ptr @_hl.main.1(ptr %0, double %1, double %2) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @__quantum__qis__phasedx__body(double %1, double %2, ptr %0)
  ret ptr %0
}

declare void @__quantum__qis__phasedx__body(double, double, ptr)
